Explicitly disable code documentation generation.  VS 2022 may have made this default and we're seeing unwanted warnings.

--- a/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
+++ b/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
@@ -10,6 +10,7 @@
 		<Configurations>Debug;Release;CodeDoc</Configurations>
 		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
