--- a/Test/Test.Neon.WSL/Test.Neon.WSL.csproj
+++ b/Test/Test.Neon.WSL/Test.Neon.WSL.csproj
@@ -8,6 +8,7 @@
 		<RootNamespace>TestWSL</RootNamespace>
 		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
+		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
