#1472: CS8032 build warnings: check after upgading to VS 17.0.1+

--- a/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
+++ b/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
@@ -27,6 +27,7 @@
 	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	  <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <AnalysisLevel>5.0</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
