--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -28,18 +28,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-
-		<!--- 
-		$todo(jefflill): 
-		
-		We're seeing CS8032 warnings without disabling this.  We started seeing this
-		after we upgraded to VS 2022 v17.1.0 and we see these warning for only a
-		handful of projects.  Hopefully, a future VS release will correct this.
-		
-			https://github.com/nforgeio/neonKUBE/issues/1472
-		-->
-		<NoWarn>CS8032</NoWarn>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup>
