--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<StartupObject>HelloWorld.Program</StartupObject>
 		<Configurations>Debug;Release;CodeDoc</Configurations>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
