--- a/Test/Test.Neon.Grpc/Test.Neon.Grpc.csproj
+++ b/Test/Test.Neon.Grpc/Test.Neon.Grpc.csproj
@@ -12,6 +12,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<ItemGroup>
