--- a/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
+++ b/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
@@ -13,6 +13,8 @@
 		<Configurations>Debug;Release;CodeDoc</Configurations>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
+		<AnalysisLevel>5.0</AnalysisLevel>
+		<EnableNETAnalyzers>false</EnableNETAnalyzers>
 	</PropertyGroup>
 
 	<ItemGroup>
