--- a/Services/test-api/test-api.csproj
+++ b/Services/test-api/test-api.csproj
@@ -10,6 +10,7 @@
 		<RootNamespace>TestApiService</RootNamespace>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
