--- a/Test/Test.Neon.Kube.Operator/Test.Neon.Kube.Operator.csproj
+++ b/Test/Test.Neon.Kube.Operator/Test.Neon.Kube.Operator.csproj
@@ -10,14 +10,15 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<!-- 
-    We need to prevent the KubeOps build targets from trying to call the non-existent
-    program entrypoint (due to this assembly being a Library) to generate the CRDs
-    and other installation related files.
-    -->
+		We need to prevent the KubeOps build targets from trying to call the non-existent
+		program entrypoint (due to this assembly being a Library) to generate the CRDs
+		and other installation related files.
+		-->
 		<KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
 		<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
 		<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
