--- a/Test/Test.Neon.Models.Temporal/Test.Neon.Models.Temporal.csproj
+++ b/Test/Test.Neon.Models.Temporal/Test.Neon.Models.Temporal.csproj
@@ -5,6 +5,7 @@
 		<Configurations>Debug;Release;CodeDoc</Configurations>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
