--- a/Test/Test.Neon.WSL/Test.Neon.WSL.csproj
+++ b/Test/Test.Neon.WSL/Test.Neon.WSL.csproj
@@ -9,6 +9,7 @@
 		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
