--- a/Tools/wsl-util/wsl-util.csproj
+++ b/Tools/wsl-util/wsl-util.csproj
@@ -4,6 +4,7 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>WslUtil</RootNamespace>
+		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
 	<ItemGroup>
