--- a/Lib/Neon.Kube.Setup/Resources/Helm/cortex/templates/service.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/cortex/templates/service.yaml
@@ -14,6 +14,9 @@ spec:
   - port: {{ .Values.cortexConfig.server.http_listen_port }}
     name: http-cortex-server
     protocol: TCP
+  - port: {{ .Values.cortexConfig.memberlist.bind_port }}
+    name: http-memberlist
+    protocol: TCP
   clusterIP: None
   selector:
     app: {{ template "cortex.name" . }}
