--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/values.yaml
@@ -16,7 +16,7 @@ operator:
   image:
     organization: neon-registry.node.local
     repository: minio-operator
-    tag: v4.3.6
+    tag: v4.4.8
     pullPolicy: IfNotPresent
   imagePullSecrets: []
   initcontainers: []
@@ -40,7 +40,7 @@ console:
   image:
     organization: neon-registry.node.local
     repository: minio-console
-    tag: v0.12.6
+    tag: v0.14.7
     pullPolicy: IfNotPresent
   imagePullSecrets: []
   initcontainers: []
@@ -69,7 +69,7 @@ tenants:
     image:
       organization: neon-registry.node.local
       repository: minio-minio
-      tag: RELEASE.2021-11-24T23-19-33Z
+      tag: RELEASE.2022-02-16T00-35-27Z
       pullPolicy: IfNotPresent
     ## Customize namespace for tenant deployment
     namespace: neon-system
@@ -167,8 +167,20 @@ tenants:
         reloader.stakater.com/search: "true"
     ## Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
     env:
+      - name: GOGC
+        value: "25"
+      - name: CONSOLE_PROMETHEUS_URL
+        value: http://cortex.neon-monitor:9009/api/prom
+      - name: CONSOLE_PROMETHEUS_AUTH_TYPE
+        value: public
+      - name: CONSOLE_PROMETHEUS_JOB_ID
+        value: integrations/agent
+      - name: MINIO_PROMETHEUS_URL
+        value: http://cortex.neon-monitor:9009/api/prom
       - name: MINIO_PROMETHEUS_AUTH_TYPE
         value: public
+      - name: MINIO_PROMETHEUS_JOB_ID
+        value: integrations/agent
     ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
     ## This is applied to MinIO pods only.
     ## Refer Kubernetes documentation for details https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass/
