--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/statefulset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/statefulset.yaml
@@ -105,6 +105,8 @@ spec:
         {{- end }}
         - mountPath: /conf
           name: tempo-query-conf
+      nodeSelector:
+        {{- toYaml .Values.nodeSelector | nindent 8 }}
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
