--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -1,20 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
 		<Version>10000.0.1650-dev-jeff</Version>
 		<Company>neonFORGE LLC</Company>
 		<Product>neonKUBE</Product>
-		<Description>INTERNAL USE ONLY: neonKUBE Kubernetes CRDs and implementations.</Description>
+		<Description>INTERNAL USE ONLY: neonKUBE Kubernetes custom resource definitions.</Description>
 		<Copyright>Copyright © 2005-2022 by neonFORGE LLC.  All rights reserved.</Copyright>
 		<PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
 		<Authors>neonFORGE Team</Authors>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<FileVersion>0.0.0.0</FileVersion>
 		<PackageLicenseUrl></PackageLicenseUrl>
-		<PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.Kube.Resources/README.md</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.Kube.ResourceDefinitions/README.md</PackageProjectUrl>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/nforgeio/neonKUBE</RepositoryUrl>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -29,12 +29,34 @@
 		<AnalysisLevel>5.0</AnalysisLevel>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<Compile Include="..\Neon.Kube.ResourceDefinitions\Resources\**\*.cs" />
-	</ItemGroup>
+	<PropertyGroup>
+		<!-- 
+		We need to prevent the KubeOps build targets from trying to call the non-existent
+		program entrypoint (due to this assembly being a Library) to generate the CRDs
+		and other installation related files.
+		-->
+		<KubeOpsSkipDockerfile>true</KubeOpsSkipDockerfile>
+		<KubeOpsSkipCrds>true</KubeOpsSkipCrds>
+		<KubeOpsSkipRbac>true</KubeOpsSkipRbac>
+		<KubeOpsSkipOperator>true</KubeOpsSkipOperator>
+		<KubeOpsSkipInstaller>true</KubeOpsSkipInstaller>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DefineConstants>$(DefineConstants)TRACE;KUBEOPS</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DefineConstants>$(DefineConstants)TRACE;KUBEOPS</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
+	  <DefineConstants>$(DefineConstants)TRACE;KUBEOPS</DefineConstants>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="KubernetesClient" Version="7.0.8" />
+		<PackageReference Include="KubeOps" Version="6.2.4" />
 	</ItemGroup>
 
 	<ItemGroup>
