--- a/Services/neon-node-agent/neon-node-agent.csproj
+++ b/Services/neon-node-agent/neon-node-agent.csproj
@@ -47,7 +47,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
-		<ProjectReference Include="..\..\Lib\Neon.Kube.Resources\Neon.Kube.Resources.csproj" />
+		<ProjectReference Include="..\..\Lib\Neon.Kube.ResourceDefinitions\Neon.Kube.ResourceDefinitions.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Kube.Operator\Neon.Kube.Operator.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Kube\Neon.Kube.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
