--- a/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
+++ b/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
@@ -35,6 +35,10 @@
 		<DefineConstants>DEBUG;TRACE</DefineConstants>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <Optimize>False</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Grpc.Net.Client" Version="2.42.0" />
 		<PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
@@ -49,6 +53,10 @@
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+
+		<!-- Include the PDB in the nuget so stack traces can include line numbers -->
+
+		<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true" />
 	</ItemGroup>
 
 </Project>
