--- a/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
+++ b/Services/neon-sso-session-proxy/neon-sso-session-proxy.csproj
@@ -17,6 +17,10 @@
 		<EnableNETAnalyzers>false</EnableNETAnalyzers>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <Optimize>False</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="GitInfo" Version="2.2.0">
 			<PrivateAssets>all</PrivateAssets>
@@ -34,6 +38,11 @@
 		<ProjectReference Include="..\..\Lib\Neon.Kube.Operator\Neon.Kube.Operator.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
 		<ProjectReference Include="..\..\Lib\Neon.Web\Neon.Web.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Include the PDB in the nuget so stack traces can include line numbers -->
+		<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true" />
 	</ItemGroup>
 
 </Project>
