--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -62,8 +62,8 @@
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 
 		<!-- Include the PDB in the nuget so stack traces can include line numbers -->
-
-		<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true"/>
+		<!-- $todo(jefflill) This isn't working for libraries using the Web SDK -->
+		<!--<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true"/>-->
 	</ItemGroup>
 
 </Project>
