--- a/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
+++ b/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
@@ -1,6 +1,7 @@
 name: neon-desktop
 datacenter: neondesktop
 environment: development
+isDesktopBuiltIn: true
 timeSources:
 - pool.ntp.org
 kubernetes:
