--- a/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
+++ b/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
@@ -2,6 +2,7 @@ name: neon-desktop
 datacenter: neondesktop
 environment: development
 isDesktopBuiltIn: true
+isLocked: false
 timeSources:
 - pool.ntp.org
 kubernetes:
