--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -22,7 +22,7 @@
 		<Configurations>Debug;Release;CodeDoc</Configurations>
 		<PackageIcon>nuget-icon.png</PackageIcon>
 		<PackageTags>kubernetes</PackageTags>
-		<RootNamespace>Neon.Kube.Resources</RootNamespace>
+		<RootNamespace>Neon.Kube.ResourceDefinitions</RootNamespace>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
